--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "images": "3.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive": "9.0.0-beta.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.0"
   },
